<?xml version="1.0"?>
<package format="2">
  <name>rospy_test</name>
  <version>0.0.0</version>
  <description>Just some stuff for testing.</description>
  <maintainer email="morten.fyhn.amundsen@gmail.com">Morten Fyhn Amundsen</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
</package>
